# ITIDA_PROJECTS

./: README.md  simulation.txt
Snake Effect - CMake/: CMakeLists.txt  New Project.pdsprj
Snake Effect - CMake/Inc/: standard_types.h
Snake Effect - CMake/Lib/: CMakeLists.txt  DIO_prog.c
Snake Effect - CMake/Src/: main.c
Snake Effect-make/Snake Effect/: Makefile  New Project.pdsprj.DESKTOP-UQDCGP9.ibrahem.workspace  main.elf  main.hex
Snake Effect-make/Snake Effect/Inc/: common_macros.h
Snake Effect-make/Snake Effect/Lib/: Makefile
Snake Effect-make/Snake Effect/Lib/inc/: DIO_int.h  DIO_priv.h
Snake Effect-make/Snake Effect/Src/: main.c
